# ai-hello

./: .gitignore  Cargo.toml  metadata.json
crates/ai/: Cargo.toml
crates/ai/src/: candle_ext.rs  date.rs  lib.rs  pos.rs  text_encoder.rs  transformer.rs
crates/fincore/: Cargo.toml
crates/fincore/src/: macro_data.rs
crates/polars-easy/: Cargo.toml
crates/polars-easy/src/: lib.rs
src/: README.md  candle_ext.rs  pos.rs  story.rs  text_encoder.rs  transformer.rs
